[workspace]
members = ["model", "connect/core", "connect/nonblocking"]

resolver = "2"

[workspace.package]
version = "4.1.0"                                            # NOTE remembe to update this and sbelow dependencies for byteserde and byteserde_derive
authors = ["Softstream <softstream.link@gmail.com>"]
readme = "readme.md"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/softstream-link/soupbintcp"
keywords = ["exchange", "protocol"]
categories = ["API bindings"]


[workspace.dependencies]
# derive macros
# byteserde = { version = "0.5" }
# byteserde_derive = { version = "0.5" }
# byteserde_types = { version = "0.5" }
byteserde = { path = "../byteserde/byteserde" }
byteserde_derive = { path = "../byteserde/byteserde_derive" }
byteserde_types = { path = "../byteserde/byteserde_types" }
derive_more = "0.99"                                          # try_into, etc
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# project modules
soupbintcp_model = { path = "./model" }
soupbintcp_connect_core = { path = "./connect/core" }
soupbintcp_connect_nonblocking = { path = "./connect/nonblocking" }

# 
links_nonblocking = { path = "../links/nonblocking" }

# other dependencies
bytes = { version = "1.5" } # networking
spin = { version = "0.9" }  # spinlocks 

# logging
log = { version = "0.4" }
env_logger = { version = "0.10" }
colored = { version = "2.0" }

# testing
links_core = { path = "../links/core" } # unit tests only

# benches
criterion = { version = "0.5" }
