[workspace]
members = ["model", "connect/core", "connect/nonblocking"]

resolver = "2"

[workspace.package]
version = "4.0.5"
authors = ["Softstream <softstream.link@gmail.com>"]
readme = "readme.md"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/softstream-link/soupbintcp"
keywords = ["exchange", "protocol"]
categories = ["API bindings"]


[workspace.dependencies]
# derive macros
byteserde = { version = "0.6" }
byteserde_derive = { version = "0.6" }
byteserde_types = { version = "0.6" }
derive_more = "0.99"                               # try_into, etc
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# project modules
soupbintcp_model = { version = "~4.0.5", path = "./model" }                             # must use ~ to avoid upgrade to 4.1 https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#tilde-requirements
soupbintcp_connect_core = { version = "~4.0.5", path = "./connect/core" }               # must use ~ to avoid upgrade to 4.1 https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#tilde-requirements
soupbintcp_connect_nonblocking = { version = "~4.0.5", path = "./connect/nonblocking" } # must use ~ to avoid upgrade to 4.1 https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#tilde-requirements

# 
links_core = { version = "0.2" }        # only used in model 
links_nonblocking = { version = "0.2" }

# other dependencies
bytes = { version = "1.5" }         # networking
spin = { version = "0.9" }          # spinlocks 
lazy_static = { version = "1.4.0" }
# logging
log = { version = "0.4" }
env_logger = { version = "0.11" }
colored = { version = "2.0" }
# benches
criterion = { version = "0.5" }
