[package]
name = "soupbintcp_model"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Data model bindings for soupbintcp exchange protocol"

[dependencies]
byteserde = { workspace = true }
byteserde_derive = { workspace = true }
byteserde_types = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }
links_core = { workspace = true, features = ["unittest"] }

[features]
default = []
full = ["unittest"]
unittest = []       # exists to provide a vector of all possible soubin messages
