[package]
name = "soupbintcp_model"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Data model bindings for soupbintcp exchange protocol"

[dependencies]
# derives
byteserde = { workspace = true }
byteserde_derive = { workspace = true }
byteserde_types = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }

links_core = { workspace = true } # short_name_type macro

[dev-dependencies]
# benchmarking
criterion = { workspace = true }

# logging
log = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }

# testing
links_core = { workspace = true, features = ["unittest"] }
serde_json = { workspace = true }

[features]
default = []
full = ["unittest"]
unittest = []       # exists to provide a vector of all possible soubin messages


# BENCHMARKS
[[bench]]
name = "soupbintcp_model_bench"
harness = false
