[package]
name = "soupbintcp_connect_core"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Core library for the soupbintcp_connect project"

[dependencies]
soupbintcp_model = { workspace = true }

links_nonblocking = { workspace = true }

byteserde = { workspace = true }

bytes = { workspace = true }
spin = { workspace = true }
lazy_static = { workspace = true }

env_logger = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
log = { workspace = true } # TODO only request when debug_assertions are on, how to do this correctly?

[dev-dependencies]
soupbintcp_model = { workspace = true, features = ["unittest"] }
links_core = { workspace = true, features = ["unittest"] }

[features]
default = []
full = ["unittest"]
unittest = ["dep:env_logger", "dep:colored"]
