[package]
name = "soupbintcp_connect_nonblocking"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "A non-blocking implementation of the SOUPBINTCP protocol."

[dependencies]
soupbintcp_connect_core = { workspace = true, optional = true }

byteserde = { workspace = true }

bytes = { workspace = true }


[dev-dependencies]
# includes sample data models
soupbintcp_model = { workspace = true, features = ["unittest"] }

# includes network related methods for setting up unit tests
links_core = { workspace = true, features = ["unittest"] }

log = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }

[features]
default = ["dep:soupbintcp_connect_core"]
full = ["unittest"]
unittest = [
    "dep:soupbintcp_connect_core",
    "soupbintcp_connect_core/unittest",
] # exists to provide a vector of all possible soubin messages
